fix z-index

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -170,7 +170,7 @@ button {
 .header {
   grid-column: 1/-1;
   grid-row: 1/2;
-  z-index: 3;
+  z-index: 4;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -527,7 +527,7 @@ a:visited {
   position: absolute;
   top: 100%;
   overflow-y: auto;
-  z-index: 10;
+  z-index: inherit;
   width: calc(var(--width) + 21.6rem);
   cursor: default;
   visibility: hidden;
@@ -583,11 +583,9 @@ a:visited {
   margin-left: auto;
 }
 .ing-list__clipboard-btn {
-  height: 5rem;
-  width: 12rem;
+  margin-bottom: 0.5em;
   font-size: 1.4rem;
   align-self: center;
-  margin-bottom: 0.8rem;
 }
 .ing-list::-webkit-scrollbar-track {
   background-color: var(--clr-light-100);
@@ -702,9 +700,6 @@ a:visited {
   flex-shrink: 0;
 }
 .ingredients__add-ing {
-  display: flex;
-  justify-content: center;
-  align-content: center;
   gap: 1rem;
   margin-top: var(--block-padding);
   font-size: 1.4rem;
