--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -139,7 +139,7 @@ button {
    grid-column: 1 / -1;
    grid-row: 1 / 2;
 
-   z-index: 3;
+   z-index: 4;
 
    display: flex;
    flex-direction: row;
