--- a/src/scss/_recipe.scss
+++ b/src/scss/_recipe.scss
@@ -131,9 +131,6 @@
    }
 
    &__add-ing {
-      display: flex;
-      justify-content: center;
-      align-content: center;
       gap: 1rem;
 
       margin-top: var(--block-padding);
